--- a/guides/sdk.mdx
+++ b/guides/sdk.mdx
@@ -93,7 +93,9 @@ Si vous mettez à jour à partir d'un SDK antérieur à la version 2020.3.2, ren
 ### SDK3 - Avatars
 :::tip[Ne réalisez pas de "réinstallations par suppression" pour SDK3 - Avatars !]
 
-***Si vous supprimez les dossiers du SDK avec Unity fermé et ouvrez Unity sans le SDK installé, vous risquez de perdre des comportements d'état.*** Ils sont fragiles et ne persistent pas lors des réinstallations complètes. Veillez à sauvegarder vos projets régulièrement et à sauvegarder/documenter vos configurations de comportements d'état.\n\n Si vous devez absolument réaliser une réinstallation complète de votre package SDK3-Avatars, sauvegardez d'abord votre projet. Vous devrez configurer de nouveau vos comportements d'état, assurez-vous donc de les avoir bien documentés.
+***Si vous supprimez les dossiers du SDK avec Unity fermé et ouvrez Unity sans le SDK installé, vous risquez de perdre des comportements d'état.*** Ils sont fragiles et ne persistent pas lors des réinstallations complètes. Veillez à sauvegarder vos projets régulièrement et à sauvegarder/documenter vos configurations de comportements d'état.
+
+ Si vous devez absolument réaliser une réinstallation complète de votre package SDK3-Avatars, sauvegardez d'abord votre projet. Vous devrez configurer de nouveau vos comportements d'état, assurez-vous donc de les avoir bien documentés.
 :::
 1. Fermez Unity.
 2. Faites une sauvegarde de votre projet Unity ! Vous n'avez pas besoin de sauvegarder votre dossier Library, ces fichiers sont générés automatiquement par Unity.
@@ -101,7 +103,9 @@ Si vous mettez à jour à partir d'un SDK antérieur à la version 2020.3.2, ren
 4. Importez le nouveau SDK3 - Avatars par-dessus l'ancien. Si vous obtenez des erreurs après l'importation, essayez de redémarrer Unity.
 
 :::tip[Erreurs attendues du SDK3 lors de la mise à jour "Avatar Dynamics"]
-Il est prévu que certaines erreurs se produisent lorsque vous mettez à jour pour la première fois le SDK3-Avatars vers le SDK de la dynamique d'avatar. Cela est dû au fait que le SDK installe les packages Burst et Mathematics durant le processus d'installation, et qu'Unity s'empresse de les importer tôt.\n\nSi vous corrigez les erreurs ou redémarrez Unity, elles devraient disparaître.
+Il est prévu que certaines erreurs se produisent lorsque vous mettez à jour pour la première fois le SDK3-Avatars vers le SDK de la dynamique d'avatar. Cela est dû au fait que le SDK installe les packages Burst et Mathematics durant le processus d'installation, et qu'Unity s'empresse de les importer tôt.
+
+Si vous corrigez les erreurs ou redémarrez Unity, elles devraient disparaître.
 :::
 
 
