📝 Update de certaines notions traduites litéralement

--- a/guides/sdk.mdx
+++ b/guides/sdk.mdx
@@ -52,7 +52,7 @@ Si vous n'avez pas utilisé le Creator Companion pour configurer votre projet, i
 
 Pour utiliser le SDK, il vous sera nécessaire de vous connecter. Pour ce faire, rendez-vous dans `VRChat SDK > Show Control Panel > Authentication`. Vous pouvez vous connecter à votre compte VRChat à partir de là.
 
-N'oubliez pas que vous devez disposer d'un compte VRChat d'au moins le rang de confiance "Nouvel Utilisateur" pour télécharger du contenu. Il n'est pas possible d'utiliser un compte Steam, Oculus ou Viveport pour télécharger du contenu.
+N'oubliez pas que vous devez disposer d'un compte VRChat d'au moins le rang de confiance "Nouvel Utilisateur" pour uploader du contenu. Il n'est pas possible d'utiliser un compte Steam, Oculus ou Viveport pour uploader du contenu.
 
 ## Et ensuite ?
 
